# ScrollGuard-ETL

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.json
scrollguard_etl/: utils.py
scrollguard_etl/etl/: __init__.py  _extract.py  _load.py  _transform.py
scrollguard_etl/tasks/: __init__.py  _tasks.py
sql/: create_schema.sql  create_tables.sql
src/scrollguard_etl/: utils.py
src/scrollguard_etl/etl/: __init__.py  _extract.py  _load.py  _transform.py
tests/: tests.py
